#ifndef CSV_H
#define CSV_H

#include <iostream>
#include <sstream>
#include <string>
#include <fstream>
#include <vector>

class Csv {
    public:
        std::vector<std::vector<std::string>> getData();
        void readCSV(const std::string& file_name);
    private:
        std::vector<std::vector<std::string>> data;     // where the csv data is stored
};

/*!
 *@return the CSV data
 */
std::vector<std::vector<std::string>> Csv::getData() {
    return data;
}

/*!
 * Function for reading CSV files and storing it
 * @param file_name is the file name for better error messages
 * @return return all lines separated in vectors
 */
void Csv::readCSV(const std::string& file_name) {
    std::ifstream file(file_name);

    data.clear();

    if (!file.is_open()) {
        std::cerr << "Failed to open file: " << file_name << std::endl;
        return;
    }

    std::string line;
    std::getline(file, line);       // skips the header line
    while (getline(file, line)) {
        std::vector<std::string> row;
        std::stringstream ss(line);
        std::string cell;

        while (std::getline(ss, cell, ',')) {
            row.push_back(cell);
        }

        data.push_back(row);
    }

    file.close();
}

#endif